--- a/src/Components/ProductItem/ProductItem.module.scss
+++ b/src/Components/ProductItem/ProductItem.module.scss
@@ -1,3 +1,14 @@
 .productItem {
-  background-color: white;
+  justify-self: center;
+  width: 100%;
+  font-family: "Trebuchet MS", sans-serif;
+}
+
+.isOverMessage {
+  color: #FFFF66;
+  text-align: center;
+}
+
+@media (max-width: 1030px) {
+
 }
