--- a/src/Components/Main/Main.module.scss
+++ b/src/Components/Main/Main.module.scss
@@ -1,5 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100&family=Lato&family=Montserrat&display=swap');
+
 .header {
+  justify-self: center;
   color: white;
   font-size: 36px;
-  margin: 0;
+  font-weight: lighter;
+  font-family: 'Exo 2', sans-serif;
+}
+.main {
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.cardsContainer {
+  display: grid;
+  align-items: start;
+  justify-content: space-evenly;
+}
+
+@media (min-width: 1030px) {
+  .cardsContainer {
+    grid-template-columns: 25% 25% 25%;
+  }
+}
+
+@media (max-width: 1030px) {
+  .cardsContainer {
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
 }
