--- a/src/Components/ProductItem/Card/CardDescription/CardDescription.module.css
+++ b/src/Components/ProductItem/Card/CardDescription/CardDescription.module.css
@@ -1,3 +1,18 @@
+.cardDescription {
+  margin-left: 15%;
+}
 
+.name {
+  margin: 5px 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: black;
+}
+
+.taste {
+  color: black;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
 
 /*# sourceMappingURL=CardDescription.module.css.map */
