--- a/src/Components/ProductItem/Card/CardImage/CardImage.module.css
+++ b/src/Components/ProductItem/Card/CardImage/CardImage.module.css
@@ -1,7 +1,8 @@
 .cardImage {
-  background-color: orange;
-  width: 100%;
-  height: 60%;
+  background: url("./../../../../assets/cat.png") no-repeat bottom left;
+  background-size: contain;
+  width: 99%;
+  border-bottom-left-radius: 12px;
 }
 
 /*# sourceMappingURL=CardImage.module.css.map */
