--- a/src/Components/ProductItem/Card/CardImage/CardImage.module.scss
+++ b/src/Components/ProductItem/Card/CardImage/CardImage.module.scss
@@ -1,5 +1,6 @@
 .cardImage {
-  background-color: orange;
-  width: 100%;
-  height: 60%;
+  background: url("./../../../../assets/cat.png") no-repeat bottom left ;
+  background-size: contain;
+  width: 99%;
+  border-bottom-left-radius: 12px;
 }
